packages/taquito-michel-codec/test/contracts_011/ill_typed/view_toplevel_bad_type.tz
{ parameter nat;
  storage nat;
  code { CAR; NIL operation ; PAIR };
  view "add_v" nat nat { UNPAIR; ADD };
  view "mul_v" nat nat { UNPAIR; PUSH nat 30; LSR; };
}

